tests/error/subtractInteger-wrong-2nd-argument-string.uplc
(program 1.0.0[[(builtin subtractInteger)(con integer 10)](con string "Ola")])